Fixed column vertical align and changed font.

--- a/assets/styles/_variables.scss
+++ b/assets/styles/_variables.scss
@@ -13,7 +13,7 @@ $color-white: #fff;
 $color-off-white: #edf0f1;
 $color-green: #25b99a;
 $color-red: #ff0000;
-$color-light-grey: #c9cfd4;;
+$color-light-grey: #c9cfd4;
 $color-drak-grey: #384047;
 $color-grey: #7b8b8e;
 $color-off-grey: #f9fafb;
